// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reactivation Form snapshots ReactivateOrgForm 1`] = `
<form
  className="SignIn"
  onSubmit={[Function]}
>
  <fieldset>
    <legend>
      User Info
    </legend>
    <label>
      Username or Email:
      <input
        name="username"
        onChange={[MockFunction]}
        required={true}
        type="text"
      />
    </label>
    <label>
      Password:
      <input
        name="password"
        onChange={[MockFunction]}
        required={true}
        type="password"
      />
    </label>
  </fieldset>
  <fieldset>
    <legend>
      Payment Info
    </legend>
    <label>
      Card Number
      <span
        className="required"
      >
        *
      </span>
      <input
        maxLength="19"
        name="cardNumber"
        onChange={[MockFunction]}
        pattern="[0-9]*"
        placeholder="Card Number"
        required={true}
        type="text"
      />
    </label>
    <label>
      Security Code
      <span
        className="required"
      >
        *
      </span>
      <input
        maxLength="3"
        name="securityCode"
        onChange={[MockFunction]}
        required={true}
        type="text"
      />
    </label>
    <label>
      Name
      <span
        className="required"
      >
        *
      </span>
      <input
        name="cardName"
        onChange={[MockFunction]}
        placeholder="Card Name"
        required={true}
        type="text"
      />
    </label>
    <label>
      Expiration Date
      <span
        className="required"
      >
        *
      </span>
      <input
        maxLength="2"
        name="expMonth"
        onChange={[MockFunction]}
        pattern="[0-9]*"
        placeholder="mm"
        required={true}
        type="text"
      />
      <input
        maxLength="4"
        minLength="4"
        name="expYear"
        onChange={[MockFunction]}
        pattern="[0-9]*"
        placeholder="yyyy"
        required={true}
        type="text"
      />
    </label>
    <label>
      Method
      <span
        className="required"
      >
        *
      </span>
      <input
        name="method"
        onChange={[MockFunction]}
        required={true}
        type="radio"
        value="visa"
      />
      Visa
      <input
        name="method"
        onChange={[MockFunction]}
        required={true}
        type="radio"
        value="master"
      />
      Master
    </label>
    <label>
      Billing Address 
      <span
        className="required"
      >
        *
      </span>
      <label>
        Street:
        <input
          name="billStreet"
          onChange={[MockFunction]}
          type="text"
        />
      </label>
      <label>
        City:
        <input
          name="billCity"
          onChange={[MockFunction]}
          type="text"
        />
      </label>
      <label>
        State
        <input
          name="state"
          onChange={[MockFunction]}
          required={true}
          type="text"
        />
      </label>
      <label>
        Zip Code:
        <input
          name="billZipcode"
          onChange={[MockFunction]}
          pattern="[0-9]*"
          type="text"
        />
      </label>
    </label>
  </fieldset>
  <h2>
    Total: $
    900
  </h2>
  <button
    type="submit"
  >
    Activate Account
  </button>
</form>
`;

exports[`Reactivation Form snapshots ReactivateOrgForm with error 1`] = `
<form
  className="SignIn"
  onSubmit={[Function]}
>
  <p
    className="error"
  >
    User already exists
  </p>
  <fieldset>
    <legend>
      User Info
    </legend>
    <label>
      Username or Email:
      <input
        name="username"
        onChange={[MockFunction]}
        required={true}
        type="text"
      />
    </label>
    <label>
      Password:
      <input
        name="password"
        onChange={[MockFunction]}
        required={true}
        type="password"
      />
    </label>
  </fieldset>
  <fieldset>
    <legend>
      Payment Info
    </legend>
    <label>
      Card Number
      <span
        className="required"
      >
        *
      </span>
      <input
        maxLength="19"
        name="cardNumber"
        onChange={[MockFunction]}
        pattern="[0-9]*"
        placeholder="Card Number"
        required={true}
        type="text"
      />
    </label>
    <label>
      Security Code
      <span
        className="required"
      >
        *
      </span>
      <input
        maxLength="3"
        name="securityCode"
        onChange={[MockFunction]}
        required={true}
        type="text"
      />
    </label>
    <label>
      Name
      <span
        className="required"
      >
        *
      </span>
      <input
        name="cardName"
        onChange={[MockFunction]}
        placeholder="Card Name"
        required={true}
        type="text"
      />
    </label>
    <label>
      Expiration Date
      <span
        className="required"
      >
        *
      </span>
      <input
        maxLength="2"
        name="expMonth"
        onChange={[MockFunction]}
        pattern="[0-9]*"
        placeholder="mm"
        required={true}
        type="text"
      />
      <input
        maxLength="4"
        minLength="4"
        name="expYear"
        onChange={[MockFunction]}
        pattern="[0-9]*"
        placeholder="yyyy"
        required={true}
        type="text"
      />
    </label>
    <label>
      Method
      <span
        className="required"
      >
        *
      </span>
      <input
        name="method"
        onChange={[MockFunction]}
        required={true}
        type="radio"
        value="visa"
      />
      Visa
      <input
        name="method"
        onChange={[MockFunction]}
        required={true}
        type="radio"
        value="master"
      />
      Master
    </label>
    <label>
      Billing Address 
      <span
        className="required"
      >
        *
      </span>
      <label>
        Street:
        <input
          name="billStreet"
          onChange={[MockFunction]}
          type="text"
        />
      </label>
      <label>
        City:
        <input
          name="billCity"
          onChange={[MockFunction]}
          type="text"
        />
      </label>
      <label>
        State
        <input
          name="state"
          onChange={[MockFunction]}
          required={true}
          type="text"
        />
      </label>
      <label>
        Zip Code:
        <input
          name="billZipcode"
          onChange={[MockFunction]}
          pattern="[0-9]*"
          type="text"
        />
      </label>
    </label>
  </fieldset>
  <h2>
    Total: $
    900
  </h2>
  <button
    type="submit"
  >
    Activate Account
  </button>
</form>
`;
